Replace Locale constructor call with Locale.of
All of Locale's constructors have been deprecated in Java 19. The
recommended migration path is to call Locale.of with the same arguments.