@@ -13,8 +13,8 @@ public class BankUtilTest {
 
     @BeforeEach
     public void setup() {
-        Locale.setDefault(new Locale("en", "US"));
-        GlobalSettings.setLocale(new Locale("en", "US"));
+        Locale.setDefault(Locale.of("en", "US"));
+        GlobalSettings.setLocale(Locale.of("en", "US"));
         Res.setBaseCurrencyCode("BTC");
         Res.setBaseCurrencyName("Bitcoin");
     }
