@@ -46,7 +46,7 @@ public class CurrencyUtilTest {
     @BeforeEach
     public void setup() {
 
-        Locale.setDefault(new Locale("en", "US"));
+        Locale.setDefault(Locale.of("en", "US"));
         Res.setBaseCurrencyCode("BTC");
         Res.setBaseCurrencyName("Bitcoin");
     }
