@@ -34,7 +34,7 @@ public class DaoStateBlockListItemTest {
 
     @BeforeEach
     public void setup() {
-        Locale.setDefault(new Locale("en", "US"));
+        Locale.setDefault(Locale.of("en", "US"));
         Res.setBaseCurrencyCode("BTC");
         Res.setBaseCurrencyName("Bitcoin");
     }
