@@ -43,7 +43,7 @@ public class ImmutableCoinFormatterTest {
 
     @BeforeEach
     public void setUp() {
-        Locale.setDefault(new Locale("en", "US"));
+        Locale.setDefault(Locale.of("en", "US"));
         Res.setBaseCurrencyCode("BTC");
         Res.setBaseCurrencyName("Bitcoin");
     }
