@@ -13,7 +13,7 @@ public class AccountNrValidatorTest {
 
     @BeforeEach
     public void setup() {
-        Locale.setDefault(new Locale("en", "US"));
+        Locale.setDefault(Locale.of("en", "US"));
         Res.setBaseCurrencyCode("BTC");
         Res.setBaseCurrencyName("Bitcoin");
     }
